--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.11.13",
+    "cors": "^2.8.5",
     "dotenv-load": "^2.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
@@ -17,6 +18,6 @@
     "graphql-relay": "^0.6.0"
   },
   "devDependencies": {
-  "eslint": "^7.27.0"
-}
+    "eslint": "^7.27.0"
+  }
 }
